--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main ]
   pull_request:
 
+env:
+  BUILD_TYPE: Release
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -161,4 +164,336 @@ jobs:
         with:
           name: native-golden-fixtures
           path: artifacts/native_golden.tar.gz.sig
+          if-no-files-found: error
+
+  macos-universal:
+    name: macOS universal VST3 + app
+    needs: build
+    runs-on: macos-14
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Install build tools
+        run: |
+          brew update
+          brew install ninja gnupg
+
+      - name: Configure universal build
+        run: |
+          cmake -S . -B build/juce \
+            -G Ninja \
+            -DSEEDBOX_SIM=ON \
+            -DQUIET_MODE=ON \
+            -DSEEDBOX_VERSION="${{ github.sha }}" \
+            -DJUCE_VST3_CAN_REPLACE_VST2=OFF \
+            -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
+            -DCMAKE_OSX_ARCHITECTURES="x86_64;arm64" \
+            -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0
+
+      - name: Build VST3 and standalone app
+        run: cmake --build build/juce --config ${BUILD_TYPE} --target SeedboxVST3 SeedboxVST3_VST3 SeedboxApp
+
+      - name: Inspect universal binaries
+        run: |
+          VST3_BUNDLE=$(find build/juce/SeedboxVST3_artefacts -name SeedBox.vst3 -print -quit)
+          if [[ -z "$VST3_BUNDLE" ]]; then
+            echo "VST3 bundle not found under build/juce/SeedboxVST3_artefacts" >&2
+            find build/juce/SeedboxVST3_artefacts -maxdepth 6 -print
+            exit 1
+          fi
+          VST3_BINARY=$(find "$VST3_BUNDLE" -path "*/Contents/MacOS/*" -type f -print -quit)
+          if [[ -z "$VST3_BINARY" ]]; then
+            echo "Could not locate a binary under $VST3_BUNDLE/Contents/MacOS" >&2
+            find "$VST3_BUNDLE" -maxdepth 6 -print
+            exit 1
+          fi
+          lipo -info "$VST3_BINARY"
+          APP_BUNDLE=$(find build/juce/SeedboxApp_artefacts -path "*SeedBox Standalone.app" -maxdepth 5 -print -quit)
+          if [[ -z "$APP_BUNDLE" ]]; then
+            echo "SeedBox Standalone.app not found under build/juce/SeedboxApp_artefacts" >&2
+            find build/juce/SeedboxApp_artefacts -maxdepth 5 -print
+            exit 1
+          fi
+          APP_BINARY=$(find "$APP_BUNDLE" -path "*/Contents/MacOS/*" -type f -print -quit)
+          if [[ -z "$APP_BINARY" ]]; then
+            echo "Could not locate a binary under $APP_BUNDLE/Contents/MacOS" >&2
+            find "$APP_BUNDLE" -maxdepth 5 -print
+            exit 1
+          fi
+          lipo -info "$APP_BINARY"
+
+      - name: Stage macOS artifacts
+        run: |
+          mkdir -p artifacts/macos
+          VST3_BUNDLE=$(find build/juce/SeedboxVST3_artefacts -name SeedBox.vst3 -print -quit)
+          if [[ -z "$VST3_BUNDLE" ]]; then
+            echo "VST3 bundle not found under build/juce/SeedboxVST3_artefacts" >&2
+            find build/juce/SeedboxVST3_artefacts -maxdepth 6 -print
+            exit 1
+          fi
+          rsync -a "$VST3_BUNDLE" artifacts/macos/
+          APP_BUNDLE=$(find build/juce/SeedboxApp_artefacts -path "*SeedBox Standalone.app" -maxdepth 5 -print -quit)
+          if [[ -z "$APP_BUNDLE" ]]; then
+            echo "SeedBox Standalone.app not found under build/juce/SeedboxApp_artefacts" >&2
+            find build/juce/SeedboxApp_artefacts -maxdepth 5 -print
+            exit 1
+          fi
+          rsync -a "$APP_BUNDLE" "artifacts/macos/SeedBox Standalone.app"
+
+      - name: Archive macOS artifacts
+        run: tar -czf artifacts/seedbox-macos-universal.tar.gz -C artifacts macos
+
+      - name: Note missing signing key (macOS)
+        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        run: echo "::notice::Skipping macOS signing: GPG_PRIVATE_KEY is not configured for this run."
+
+      - name: Import signing key
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+        run: echo "$GPG_PRIVATE_KEY" | gpg --batch --import
+
+      - name: Sign macOS artifacts
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        env:
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        run: |
+          gpg --batch --yes \
+              --pinentry-mode loopback \
+              --passphrase "${GPG_PASSPHRASE}" \
+              --local-user 4473F115745A1A61 \
+              --detach-sign artifacts/seedbox-macos-universal.tar.gz
+
+      - name: Upload macOS universal bundle
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-macos-universal
+          path: |
+            artifacts/macos
+            artifacts/seedbox-macos-universal.tar.gz
+          if-no-files-found: error
+
+      - name: Upload macOS signature
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-macos-universal
+          path: artifacts/seedbox-macos-universal.tar.gz.sig
+          if-no-files-found: error
+
+  linux-host:
+    name: Linux dependency + JUCE sanity
+    needs: build
+    runs-on: ubuntu-latest
+    env:
+      PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Install JUCE dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential \
+            clang \
+            ninja-build \
+            cmake \
+            pkg-config \
+            libx11-dev \
+            libxinerama-dev \
+            libxext-dev \
+            libxrandr-dev \
+            libxcomposite-dev \
+            libxdamage-dev \
+            libxfixes-dev \
+            libxcursor-dev \
+            libgtk-3-dev \
+            libfreetype6-dev \
+            libwebkit2gtk-4.1-dev \
+            libcurl4-openssl-dev \
+            libasound2-dev \
+            gnupg
+
+      - name: Sanity check GTK/WebKit pkg-config wiring
+        run: |
+          pkg-config --cflags --libs gtk+-3.0
+          pkg-config --cflags --libs webkit2gtk-4.1
+
+      - name: Configure JUCE host build
+        run: |
+          GTK_WEBKIT_CFLAGS=$(pkg-config --cflags gtk+-3.0 webkit2gtk-4.1)
+          GTK_WEBKIT_LIBS=$(pkg-config --libs gtk+-3.0 webkit2gtk-4.1)
+          CURL_LIBS=$(pkg-config --libs libcurl)
+          cmake -S . -B build/juce \
+            -G Ninja \
+            -DSEEDBOX_SIM=ON \
+            -DQUIET_MODE=ON \
+            -DSEEDBOX_VERSION="${{ github.sha }}" \
+            -DJUCE_VST3_CAN_REPLACE_VST2=OFF \
+            -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
+            -DCMAKE_CXX_FLAGS_INIT="${GTK_WEBKIT_CFLAGS}" \
+            -DCMAKE_EXE_LINKER_FLAGS_INIT="${GTK_WEBKIT_LIBS} ${CURL_LIBS}" \
+            -DCMAKE_SHARED_LINKER_FLAGS_INIT="${GTK_WEBKIT_LIBS} ${CURL_LIBS}"
+
+      - name: Build Linux targets
+        run: cmake --build build/juce --config ${BUILD_TYPE} --target SeedboxVST3 SeedboxVST3_VST3 SeedboxApp
+
+      - name: Stage Linux artifacts
+        run: |
+          mkdir -p artifacts/linux
+          VST3_BUNDLE=$(find build/juce/SeedboxVST3_artefacts -name SeedBox.vst3 -print -quit)
+          if [[ -z "$VST3_BUNDLE" ]]; then
+            echo "SeedBox.vst3 not found under build/juce/SeedboxVST3_artefacts" >&2
+            find build/juce/SeedboxVST3_artefacts -maxdepth 6 -print
+            exit 1
+          fi
+          rsync -a "$VST3_BUNDLE" artifacts/linux/
+          APP_BINARY=$(find build/juce/SeedboxApp_artefacts -maxdepth 6 -type f \( -name "SeedBox Standalone" -o -name "SeedBox" \) -print -quit)
+          if [[ -z "$APP_BINARY" ]]; then
+            echo "SeedBox standalone binary not found under build/juce/SeedboxApp_artefacts" >&2
+            find build/juce/SeedboxApp_artefacts -maxdepth 6 -print
+            exit 1
+          fi
+          install -m 755 "$APP_BINARY" "artifacts/linux/$(basename "$APP_BINARY")"
+
+      - name: Archive Linux artifacts
+        run: tar -czf artifacts/seedbox-linux-host.tar.gz -C artifacts linux
+
+      - name: Note missing signing key (Linux)
+        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        run: echo "::notice::Skipping Linux signing: GPG_PRIVATE_KEY is not configured for this run."
+
+      - name: Import signing key
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+        run: echo "$GPG_PRIVATE_KEY" | gpg --batch --import
+
+      - name: Sign Linux artifacts
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        env:
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        run: |
+          gpg --batch --yes \
+              --pinentry-mode loopback \
+              --passphrase "${GPG_PASSPHRASE}" \
+              --local-user 4473F115745A1A61 \
+              --detach-sign artifacts/seedbox-linux-host.tar.gz
+
+      - name: Upload Linux bundle
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-linux-host
+          path: |
+            artifacts/linux
+            artifacts/seedbox-linux-host.tar.gz
+          if-no-files-found: error
+
+      - name: Upload Linux signature
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-linux-host
+          path: artifacts/seedbox-linux-host.tar.gz.sig
+          if-no-files-found: error
+
+  windows-host:
+    name: Windows dependency + JUCE sanity
+    needs: build
+    runs-on: windows-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up MSVC developer command prompt
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x64
+
+      - name: Install Ninja
+        run: choco install ninja --no-progress
+
+      - name: Install GnuPG
+        run: choco install gnupg --yes --no-progress
+
+      - name: Configure JUCE host build
+        shell: pwsh
+        run: |
+          cmake -S . -B build/juce `
+            -G "Ninja" `
+            -DSEEDBOX_SIM=ON `
+            -DQUIET_MODE=ON `
+            -DSEEDBOX_VERSION="${{ github.sha }}" `
+            -DJUCE_VST3_CAN_REPLACE_VST2=OFF `
+            -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+
+      - name: Build Windows targets
+        shell: pwsh
+        run: cmake --build build/juce --config $env:BUILD_TYPE --target SeedboxVST3 SeedboxVST3_VST3 SeedboxApp
+
+      - name: Stage Windows artifacts
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          New-Item -ItemType Directory -Force -Path artifacts/windows | Out-Null
+
+          $vst3Bundle = Get-ChildItem -Path build/juce/SeedboxVST3_artefacts -Recurse -Directory -Filter "SeedBox.vst3" | Select-Object -First 1
+          if (-not $vst3Bundle) {
+            Write-Error "SeedBox.vst3 not found under build/juce/SeedboxVST3_artefacts"
+          }
+          Copy-Item -Path $vst3Bundle.FullName -Destination "artifacts/windows" -Recurse -Force
+
+          $appBinary = Get-ChildItem -Path build/juce/SeedboxApp_artefacts -Recurse -File | Where-Object { $_.Name -in @("SeedBox Standalone.exe", "SeedBox.exe") } | Select-Object -First 1
+          if (-not $appBinary) {
+            Write-Error "SeedBox Standalone.exe or SeedBox.exe not found under build/juce/SeedboxApp_artefacts"
+          }
+          Copy-Item -Path $appBinary.FullName -Destination (Join-Path "artifacts/windows" $appBinary.Name) -Force
+
+      - name: Archive Windows artifacts
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          Compress-Archive -Path "artifacts/windows/*" -DestinationPath "artifacts/seedbox-windows-host.zip" -Force
+
+      - name: Note missing signing key (Windows)
+        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        shell: pwsh
+        run: echo "::notice::Skipping Windows signing: GPG_PRIVATE_KEY is not configured for this run."
+
+      - name: Import signing key
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        shell: pwsh
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+        run: $env:GPG_PRIVATE_KEY | gpg --batch --import
+
+      - name: Sign Windows artifacts
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        shell: pwsh
+        env:
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        run: |
+          gpg --batch --yes `
+              --pinentry-mode loopback `
+              --passphrase "$env:GPG_PASSPHRASE" `
+              --local-user 4473F115745A1A61 `
+              --detach-sign "artifacts/seedbox-windows-host.zip"
+
+      - name: Upload Windows bundle
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-windows-host
+          path: |
+            artifacts/windows
+            artifacts/seedbox-windows-host.zip
+          if-no-files-found: error
+
+      - name: Upload Windows signature
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-windows-host
+          path: artifacts/seedbox-windows-host.zip.sig
           if-no-files-found: error
