--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,7 +129,7 @@ jobs:
 
       - name: Note missing signing key for golden fixtures
         if: ${{ matrix.name == 'native' && secrets.GPG_PRIVATE_KEY == '' }}
-        run: echo "::notice::Skipping signing: GPG_PRIVATE_KEY is not configured for this run."
+        run: 'echo "::notice::Skipping signing: GPG_PRIVATE_KEY is not configured for this run."'
 
       - name: Import signing key for golden fixtures
         if: ${{ matrix.name == 'native' && secrets.GPG_PRIVATE_KEY != '' }}
@@ -246,7 +246,7 @@ jobs:
 
       - name: Note missing signing key (macOS)
         if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
-        run: echo "::notice::Skipping macOS signing: GPG_PRIVATE_KEY is not configured for this run."
+        run: 'echo "::notice::Skipping macOS signing: GPG_PRIVATE_KEY is not configured for this run."'
 
       - name: Import signing key
         if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
@@ -363,7 +363,7 @@ jobs:
 
       - name: Note missing signing key (Linux)
         if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
-        run: echo "::notice::Skipping Linux signing: GPG_PRIVATE_KEY is not configured for this run."
+        run: 'echo "::notice::Skipping Linux signing: GPG_PRIVATE_KEY is not configured for this run."'
 
       - name: Import signing key
         if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
@@ -460,7 +460,7 @@ jobs:
       - name: Note missing signing key (Windows)
         if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
         shell: pwsh
-        run: echo "::notice::Skipping Windows signing: GPG_PRIVATE_KEY is not configured for this run."
+        run: 'echo "::notice::Skipping Windows signing: GPG_PRIVATE_KEY is not configured for this run."'
 
       - name: Import signing key
         if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
