--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ENABLE_GOLDEN: "0"
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
     strategy:
       matrix:
         include:
@@ -128,19 +130,19 @@ jobs:
         run: tar -czf artifacts/native_golden.tar.gz -C artifacts native_golden
 
       - name: Note missing signing key for golden fixtures
-        if: ${{ matrix.name == 'native' && secrets.GPG_PRIVATE_KEY == '' }}
+        if: ${{ matrix.name == 'native' && env.GPG_PRIVATE_KEY == '' }}
         run: 'echo "::notice::Skipping signing: GPG_PRIVATE_KEY is not configured for this run."'
 
       - name: Import signing key for golden fixtures
-        if: ${{ matrix.name == 'native' && secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ matrix.name == 'native' && env.GPG_PRIVATE_KEY != '' }}
         env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          GPG_PRIVATE_KEY: ${{ env.GPG_PRIVATE_KEY }}
         run: echo "$GPG_PRIVATE_KEY" | gpg --batch --import
 
       - name: Sign golden fixtures
-        if: ${{ matrix.name == 'native' && secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ matrix.name == 'native' && env.GPG_PRIVATE_KEY != '' }}
         env:
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GPG_PASSPHRASE: ${{ env.GPG_PASSPHRASE }}
         run: |
           gpg --batch --yes \
               --pinentry-mode loopback \
@@ -159,7 +161,7 @@ jobs:
           if-no-files-found: error
 
       - name: Upload native golden signature
-        if: ${{ matrix.name == 'native' && secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ matrix.name == 'native' && env.GPG_PRIVATE_KEY != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: native-golden-fixtures
@@ -170,6 +172,9 @@ jobs:
     name: macOS universal VST3 + app
     needs: build
     runs-on: macos-14
+    env:
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -245,19 +250,19 @@ jobs:
         run: tar -czf artifacts/seedbox-macos-universal.tar.gz -C artifacts macos
 
       - name: Note missing signing key (macOS)
-        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        if: ${{ env.GPG_PRIVATE_KEY == '' }}
         run: 'echo "::notice::Skipping macOS signing: GPG_PRIVATE_KEY is not configured for this run."'
 
       - name: Import signing key
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          GPG_PRIVATE_KEY: ${{ env.GPG_PRIVATE_KEY }}
         run: echo "$GPG_PRIVATE_KEY" | gpg --batch --import
 
       - name: Sign macOS artifacts
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         env:
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GPG_PASSPHRASE: ${{ env.GPG_PASSPHRASE }}
         run: |
           gpg --batch --yes \
               --pinentry-mode loopback \
@@ -275,7 +280,7 @@ jobs:
           if-no-files-found: error
 
       - name: Upload macOS signature
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: seedbox-macos-universal
@@ -288,6 +293,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -362,19 +369,19 @@ jobs:
         run: tar -czf artifacts/seedbox-linux-host.tar.gz -C artifacts linux
 
       - name: Note missing signing key (Linux)
-        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        if: ${{ env.GPG_PRIVATE_KEY == '' }}
         run: 'echo "::notice::Skipping Linux signing: GPG_PRIVATE_KEY is not configured for this run."'
 
       - name: Import signing key
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          GPG_PRIVATE_KEY: ${{ env.GPG_PRIVATE_KEY }}
         run: echo "$GPG_PRIVATE_KEY" | gpg --batch --import
 
       - name: Sign Linux artifacts
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         env:
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GPG_PASSPHRASE: ${{ env.GPG_PASSPHRASE }}
         run: |
           gpg --batch --yes \
               --pinentry-mode loopback \
@@ -392,7 +399,7 @@ jobs:
           if-no-files-found: error
 
       - name: Upload Linux signature
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: seedbox-linux-host
@@ -403,6 +410,9 @@ jobs:
     name: Windows dependency + JUCE sanity
     needs: build
     runs-on: windows-latest
+    env:
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -458,22 +468,22 @@ jobs:
           Compress-Archive -Path "artifacts/windows/*" -DestinationPath "artifacts/seedbox-windows-host.zip" -Force
 
       - name: Note missing signing key (Windows)
-        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        if: ${{ env.GPG_PRIVATE_KEY == '' }}
         shell: pwsh
         run: 'echo "::notice::Skipping Windows signing: GPG_PRIVATE_KEY is not configured for this run."'
 
       - name: Import signing key
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         shell: pwsh
         env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          GPG_PRIVATE_KEY: ${{ env.GPG_PRIVATE_KEY }}
         run: $env:GPG_PRIVATE_KEY | gpg --batch --import
 
       - name: Sign Windows artifacts
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         shell: pwsh
         env:
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GPG_PASSPHRASE: ${{ env.GPG_PASSPHRASE }}
         run: |
           gpg --batch --yes `
               --pinentry-mode loopback `
@@ -491,7 +501,7 @@ jobs:
           if-no-files-found: error
 
       - name: Upload Windows signature
-        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        if: ${{ env.GPG_PRIVATE_KEY != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: seedbox-windows-host
