--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,6 +175,12 @@ jobs:
     env:
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      APPLE_SIGNING_CERT_BASE64: ${{ secrets.APPLE_SIGNING_CERT_BASE64 }}
+      APPLE_SIGNING_CERT_PASSWORD: ${{ secrets.APPLE_SIGNING_CERT_PASSWORD }}
+      APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
+      APPLE_NOTARY_KEY_ID: ${{ secrets.APPLE_NOTARY_KEY_ID }}
+      APPLE_NOTARY_ISSUER_ID: ${{ secrets.APPLE_NOTARY_ISSUER_ID }}
+      APPLE_NOTARY_KEY_BASE64: ${{ secrets.APPLE_NOTARY_KEY_BASE64 }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -228,7 +234,111 @@ jobs:
           fi
           lipo -info "$APP_BINARY"
 
+      - name: Note missing macOS signing + notarization credentials
+        if: >-
+          ${{
+            env.APPLE_SIGNING_CERT_BASE64 == '' ||
+            env.APPLE_SIGNING_CERT_PASSWORD == '' ||
+            env.APPLE_SIGNING_IDENTITY == '' ||
+            env.APPLE_NOTARY_KEY_ID == '' ||
+            env.APPLE_NOTARY_ISSUER_ID == '' ||
+            env.APPLE_NOTARY_KEY_BASE64 == ''
+          }}
+        run: |
+          echo "::notice::Skipping macOS signing + notarization: Apple Developer ID and notary credentials are not fully configured."
+
+      - name: Sign and notarize macOS bundles
+        if: >-
+          ${{
+            env.APPLE_SIGNING_CERT_BASE64 != '' &&
+            env.APPLE_SIGNING_CERT_PASSWORD != '' &&
+            env.APPLE_SIGNING_IDENTITY != '' &&
+            env.APPLE_NOTARY_KEY_ID != '' &&
+            env.APPLE_NOTARY_ISSUER_ID != '' &&
+            env.APPLE_NOTARY_KEY_BASE64 != ''
+          }}
+        env:
+          KEYCHAIN_PASSWORD: ${{ github.run_id }}-${{ github.run_attempt }}
+        run: |
+          set -euo pipefail
+
+          echo "Creating a temporary keychain for codesigning."
+          KEYCHAIN_PATH="$RUNNER_TEMP/seedbox-signing.keychain-db"
+          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security list-keychains -d user -s "$KEYCHAIN_PATH"
+
+          echo "Importing Developer ID Application identity."
+          CERT_PATH="$RUNNER_TEMP/seedbox-developer-id.p12"
+          echo "$APPLE_SIGNING_CERT_BASE64" | base64 --decode > "$CERT_PATH"
+          security import "$CERT_PATH" \
+            -k "$KEYCHAIN_PATH" \
+            -P "$APPLE_SIGNING_CERT_PASSWORD" \
+            -T /usr/bin/codesign \
+            -T /usr/bin/security
+          security set-key-partition-list \
+            -S apple-tool:,apple:,codesign: \
+            -s \
+            -k "$KEYCHAIN_PASSWORD" \
+            "$KEYCHAIN_PATH"
+
+          VST3_BUNDLE=$(find build/juce/SeedboxVST3_artefacts -name SeedBox.vst3 -print -quit)
+          if [[ -z "$VST3_BUNDLE" ]]; then
+            echo "VST3 bundle not found under build/juce/SeedboxVST3_artefacts" >&2
+            find build/juce/SeedboxVST3_artefacts -maxdepth 6 -print
+            exit 1
+          fi
+          APP_BUNDLE=$(find build/juce/SeedboxApp_artefacts -path "*SeedBox Standalone.app" -maxdepth 5 -print -quit)
+          if [[ -z "$APP_BUNDLE" ]]; then
+            echo "SeedBox Standalone.app not found under build/juce/SeedboxApp_artefacts" >&2
+            find build/juce/SeedboxApp_artefacts -maxdepth 5 -print
+            exit 1
+          fi
+
+          echo "Codesigning VST3 and standalone app with hardened runtime."
+          codesign --deep --force --options runtime --timestamp --sign "$APPLE_SIGNING_IDENTITY" "$VST3_BUNDLE"
+          codesign --deep --force --options runtime --timestamp --sign "$APPLE_SIGNING_IDENTITY" "$APP_BUNDLE"
+
+          echo "Preparing App Store Connect API key for notarization."
+          NOTARY_KEY_PATH="$RUNNER_TEMP/AuthKey.p8"
+          echo "$APPLE_NOTARY_KEY_BASE64" | base64 --decode > "$NOTARY_KEY_PATH"
+
+          echo "Submitting VST3 bundle for notarization."
+          VST3_ZIP="$RUNNER_TEMP/SeedBox.vst3.zip"
+          ditto -c -k --keepParent "$VST3_BUNDLE" "$VST3_ZIP"
+          xcrun notarytool submit "$VST3_ZIP" \
+            --key "$NOTARY_KEY_PATH" \
+            --key-id "$APPLE_NOTARY_KEY_ID" \
+            --issuer "$APPLE_NOTARY_ISSUER_ID" \
+            --wait
+
+          echo "Submitting standalone app for notarization."
+          APP_ZIP="$RUNNER_TEMP/SeedBox-Standalone.app.zip"
+          ditto -c -k --keepParent "$APP_BUNDLE" "$APP_ZIP"
+          xcrun notarytool submit "$APP_ZIP" \
+            --key "$NOTARY_KEY_PATH" \
+            --key-id "$APPLE_NOTARY_KEY_ID" \
+            --issuer "$APPLE_NOTARY_ISSUER_ID" \
+            --wait
+
+          echo "Stapling notarization tickets."
+          xcrun stapler staple "$VST3_BUNDLE"
+          xcrun stapler staple "$APP_BUNDLE"
+
+          echo "Cleaning up temporary keychain."
+          security delete-keychain "$KEYCHAIN_PATH"
+
       - name: Verify macOS bundle signatures
+        if: >-
+          ${{
+            env.APPLE_SIGNING_CERT_BASE64 != '' &&
+            env.APPLE_SIGNING_CERT_PASSWORD != '' &&
+            env.APPLE_SIGNING_IDENTITY != '' &&
+            env.APPLE_NOTARY_KEY_ID != '' &&
+            env.APPLE_NOTARY_ISSUER_ID != '' &&
+            env.APPLE_NOTARY_KEY_BASE64 != ''
+          }}
         run: |
           VST3_BUNDLE=$(find build/juce/SeedboxVST3_artefacts -name SeedBox.vst3 -print -quit)
           if [[ -z "$VST3_BUNDLE" ]]; then
