--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,7 +195,7 @@ jobs:
           cmake -S . -B build/juce \
             -G Ninja \
             -DSEEDBOX_SIM=ON \
-            -DQUIET_MODE=ON \
+            -DQUIET_MODE=OFF \
             -DSEEDBOX_VERSION="${{ github.sha }}" \
             -DJUCE_VST3_CAN_REPLACE_VST2=OFF \
             -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
@@ -535,7 +535,7 @@ jobs:
           cmake -S . -B build/juce \
             -G Ninja \
             -DSEEDBOX_SIM=ON \
-            -DQUIET_MODE=ON \
+            -DQUIET_MODE=OFF \
             -DSEEDBOX_VERSION="${{ github.sha }}" \
             -DJUCE_VST3_CAN_REPLACE_VST2=OFF \
             -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
@@ -644,7 +644,7 @@ jobs:
           cmake -S . -B build/juce `
             -G "Ninja" `
             -DSEEDBOX_SIM=ON `
-            -DQUIET_MODE=ON `
+            -DQUIET_MODE=OFF `
             -DSEEDBOX_VERSION="${{ github.sha }}" `
             -DJUCE_VST3_CAN_REPLACE_VST2=OFF `
             -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
